# FER_Initial-facial-expression-recognition-model

./: README.md  TEST_DIRECT.md
FER_Deploy_Yes/: mobilefacenet_fp16.engine  mobilefacenet_pruned.onnx
FER_Deploy_Yes/cpp_deploy/: CMakeLists.txt  Int8Calibrator.h  main.cpp
